# python-makefile-checker

./: CODEOWNERS  README.md
.github/workflows/: actions.yml
makefile_checker/: pyproject.toml
makefile_checker/makefile_checker/: check.py  checker.py  exceptions.py
