[tool.poetry]
name = "makefile-checker"
version = "0.0.0"
description = "Package to validate makefile contents"
authors = ["rohantilva"]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern  = "^(?P<base>\\d+\\.\\d+\\.\\d+)(-?((?P<stage>[a-zA-Z]+)\\.?(?P<revision>\\d+)?))?"
format-jinja = """
    {%- if distance == 0 -%}
        {{- base -}}
    {%- else -%}
        {{- base }}.dev{{ distance }}+{{ commit }}
    {%- endif -%}
"""

[tool.poetry.scripts]
check-makefile = "makefile_checker.checker:check"

[build-system]
requires = ["poetry-core>=1.9.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"